@@ -4,12 +4,14 @@ x.x.x
 2. Remove most dialog toolbar menus and replace with buttons.
 3. Remove option to replace player icon with power button, as no longer
    applicable.
-4. Show track subtitles.
+4. Show track subtitles, if enabled in interface settings.
 5. Add custom favourite folder icon.
 6. Try to extract dominant, and not average, colour from image when using
    colour from cover.
 7. Invalidate artist list cache if user-defined role exclusion changed.
 8. Use coloured mobile navigation, progress, sliders, etc. even when tinting.
+9. Show full server-side interface settings page, but add a note that not all
+   settings affect Material Skin.
 
 5.3.4
 -----
